# rfood

./: Cargo.toml  Makefile  README.md
.github/workflows/: latex.yml  main.yml  rust.yml
examples/src/: lib.rs  mod.rs
examples/src/bool/: fp.rs
examples/src/countdown/: fp.rs
examples/src/exp/: oop.rs
examples/src/exp2/: fp.rs  oop.rs
examples/src/generics/: fp.rs  oop.rs
examples/src/list/: oop.rs
examples/src/multi_interface/: fp.rs
examples/src/mutable/: fp.rs  oop.rs  oop_basic.rs
examples/src/set/: fp.rs  fp_output.rs  oop.rs  oop_output.rs  test.rs
examples/src/shape/: mod.rs  oop.rs
examples/src/shape2/: fp.rs  oop.rs
examples/src/shape3/: oop.rs
examples/src/sql/: fp.rs
examples/tests/: test_examples.rs  test_outputs.rs
outputs/: output.rs
outputs/src/: lib.rs
outputs/tests/: test_outputs.rs
report/: .gitignore  dissertation.bib  dissertation.cls  syntax.tex  thesis.tex
report/snippets/: type_def_transfom_fp.rs  type_def_transfom_oop.rs  type_fn_transfom_fp.rs  type_fn_transfom_oop.rs
rfood-code/: CHANGELOG.md  README.md  package-lock.json  package.json
rfood-code/src/: extension.ts
scala/.bsp/: sbt.json
scala/examples/: build.sbt
src/: exp.rs  lib.rs  main.rs  set.rs  test.rs
src/ast/: context.rs  create.rs  mod.rs  print.rs
src/cli/: cli.rs
src/context/: delta.rs  errors.rs  gamma.rs  mod.rs
src/examples/: mod.rs
src/fp/: exp.rs  set.rs
src/oop/: exp.rs  mod.rs  set.rs
src/transform/: mod.rs  transformer.rs  visitors.rs
src/utils/: utils.rs
tests/: test_examples.rs  test_outputs.rs  test_run.rs
(+30 files in other folders)
