[package]
name = "rfood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { features = ["extra-traits", "full", "visit", "visit-mut"], git="https://github.com/JElgar/syn", branch="master" }
quote = "1.0"
proc-macro2 = "1.0.36"
clap = { version = "3.1.6", features = ["derive"] }
wasm-bindgen = "0.2.33"

[lib]
crate-type = ["cdylib", "rlib"]
